--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="https://github.com/0-rAge/IITA1-final/css/style.css">
+    <link rel="stylesheet" href="https://0-rage.github.io/IITA1-final/css/style.css">
     <meta charset="utf-8">
     <title>My Profile</title>
   </head>
